facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_scalar_i128_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────────────────────────────────╮
│100000000000000000000                           │
╰────────────────────────────────────────────────╯
╭After───────────────────────────────────────────╮
│-100000000000000000000                          │
╰────────────────────────────────────────────────╯
╔Diff════════════════════════════════════════════╗
║100000000000000000000 → -100000000000000000000  ║
╚════════════════════════════════════════════════╝
