facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_scalar_i64_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────╮
│10000000000         │
╰────────────────────╯
╭After───────────────╮
│10000000000         │
╰────────────────────╯
╔Diff════════════════╗
║(structurally equal)║
╚════════════════════╝
