facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_scalar_i64_min_max.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────────────────────────────╮
│-9223372036854775808                        │
╰────────────────────────────────────────────╯
╭After───────────────────────────────────────╮
│9223372036854775807                         │
╰────────────────────────────────────────────╯
╔Diff════════════════════════════════════════╗
║-9223372036854775808 → 9223372036854775807  ║
╚════════════════════════════════════════════╝
