facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_scalar_i8_min_max.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────╮
│-128        │
╰────────────╯
╭After───────╮
│127         │
╰────────────╯
╔Diff════════╗
║-128 → 127  ║
╚════════════╝
