facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_scalar_isize_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before────────╮
│1000          │
╰──────────────╯
╭After─────────╮
│-1000         │
╰──────────────╯
╔Diff══════════╗
║1000 → -1000  ║
╚══════════════╝
