facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_scalar_str_empty_vs_nonempty.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before────────╮
│""            │
╰──────────────╯
╭After─────────╮
│"hello"       │
╰──────────────╯
╔Diff══════════╗
║"" → "hello"  ║
╚══════════════╝
