facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_scalar_u16_min_max.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────╮
│0           │
╰────────────╯
╭After───────╮
│65535       │
╰────────────╯
╔Diff════════╗
║0 → 65535   ║
╚════════════╝
