facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_scalar_u32_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────╮
│0               │
╰────────────────╯
╭After───────────╮
│4000000000      │
╰────────────────╯
╔Diff════════════╗
║0 → 4000000000  ║
╚════════════════╝
