facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_scalar_u8_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────╮
│200                 │
╰────────────────────╯
╭After───────────────╮
│200                 │
╰────────────────────╯
╔Diff════════════════╗
║(structurally equal)║
╚════════════════════╝
